Fix z-index for open nav

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -88,7 +88,7 @@
   }
 
   .main-nav {
-    background-color: rgb(255, 255, 255, 0.97);
+    background-color: #212529;
     position: absolute;
     top: 0;
     left: 0;
@@ -120,6 +120,7 @@
     pointer-events: auto;
     visibility: visible;
     transform: translateX(0);
+    z-index: 1000;
   }
 
   .fa-bars.icon-mobile-nav {
